--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,9 +1,7 @@
-require('dotenv').config();
 const path = require('path');
-const config = require('./app/config');
+const config = require('./dist/config');
 
 module.exports = {
-  config: path.resolve('db', 'sequelizeConfig.json'),
   url: config.POSTGRES_URL,
-  'migrations-path': path.resolve('migrations'),
+  'migrations-path': 'migrations',
 };
