--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "pg": "^8.12.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "rimraf": "^5.0.5",
+    "sequelize-cli": "^6.6.2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
