--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   },
   "rules": {
     "no-console": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
